--- a/package.json
+++ b/package.json
@@ -1,19 +1,19 @@
 {
-  "name": "movies",
-  "version": "1.0.0",
-  "description": "",
-  "type": "module",
-  "main": "index.js",
-  "scripts": {
-    "dev": "node --watch ./src/index.js --env=development",
-    "prod": "node ./src/index.js --env=production",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "MIT",
-  "dependencies": {
-    "dotenv": "^17.0.0",
-    "express": "^5.1.0"
-  }
+    "name": "movies",
+    "version": "1.0.0",
+    "description": "",
+    "type": "module",
+    "main": "index.js",
+    "scripts": {
+        "dev": "node --watch ./src/index.js --env=development",
+        "prod": "node --watch ./src/index.js --env=production",
+        "test": "echo \"Error: no test specified\" && exit 1"
+    },
+    "keywords": [],
+    "author": "Titas",
+    "license": "MIT",
+    "dependencies": {
+        "dotenv": "^17.0.0",
+        "express": "^5.1.0"
+    }
 }
