--- a/src/.env.example
+++ b/src/.env.example
@@ -1,5 +1,9 @@
+NODE_ENV="dev"
 PORT=3000
 TITLE="Zuikio filmai"
-DB_DATABASE=
-DB_USER=
-BD_PASSWORD=
+DB_HOST="localhost"
+DB_PORT=3306
+DB_DATABASE=""
+DB_USER=""
+DB_PASSWORD=""
+COOKIE_MAX_AGE=3600
